--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_DEBUG=workers && nodemon index.js",
-    "test": "nodemon test.js ",
-    "parcel": "parcel public/js/app.js"
+    "start": "set DEV=false && nodemon index.js",
+    "test": "nodemon test"
   },
   "keywords": [],
   "author": "",
